--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.7"
+    "nuxt-edge": "latest"
   },
   "devDependencies": {
     "@apollo/client": "^3.4.16",
-    "@nuxtjs/composition-api": "^0.29.3",
+    "@nuxt/bridge": "npm:@nuxt/bridge-edge",
     "@vue/apollo-composable": "^4.0.0-alpha.15",
     "eslint-config-prettier": "^8.3.0",
     "graphql": "^15.6.1",
